--- a/index.html
+++ b/index.html
@@ -4,32 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'Ambroisie | Table Reservation</title>
+    <title>L'Ambroisie | Oriental Dining Experience</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #faf9f6;
+            background-color: #ffffff;
+            color: #1a1a1a;
         }
         h1, h2, h3, .serif {
             font-family: 'Playfair Display', serif;
         }
+        .luxury-heading {
+            font-family: 'Cinzel', serif;
+            letter-spacing: 0.1em;
+        }
         input:focus, select:focus, textarea:focus {
             outline: none;
-            border-color: #b49164 !important;
-            box-shadow: 0 0 0 2px rgba(180, 145, 100, 0.1);
+            border-color: #BC1E22 !important;
+            box-shadow: 0 0 0 1px rgba(188, 30, 34, 0.1);
+        }
+        .gold-border {
+            border-color: #D4AF37;
+        }
+        .oriental-red {
+            background-color: #BC1E22;
+        }
+        .oriental-red-text {
+            color: #BC1E22;
         }
         /* Custom scrollbar */
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
         ::-webkit-scrollbar-track {
-            background: #f1f1f1;
+            background: #f8f8f8;
         }
         ::-webkit-scrollbar-thumb {
-            background: #b49164;
-            border-radius: 4px;
+            background: #D4AF37;
         }
     </style>
 <script type="importmap">
